--- a/css/styles.css
+++ b/css/styles.css
@@ -636,7 +636,7 @@ ul {
   margin-left: 80px;
 }
 
-.e-mail-input .form-label {
+.e-mail-input .form-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
