--- a/css/styles.css
+++ b/css/styles.css
@@ -567,6 +567,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--cloud);
+  margin-bottom: 16px;
 }
 
 .footer-text {
@@ -623,65 +624,6 @@ ul {
 .media-icons .social-link:focus {
   background-color: var(--green);
 }
-
-/* .e-mail-input {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-left: 80px;
-}
-
-.e-mail-input .form-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--white);
-  margin-bottom: 16px;
-}
-
-.form-label {
-  display: flex;
-}
-
-.form-label .form-input {
-  font-family: var(--font-family);
-  color: var(--white);
-  width: 264px;
-  height: 40px;
-  margin-right: 24px;
-  padding-left: 16px;
-  background-color: var(--navy-blue);
-  gap: 16px;
-  border: 1px solid var(--white);
-  border-radius: 4px;
-  outline: none;
-}
-.form-label .form-btn {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--white);
-  border-radius: 4px;
-  text-align: center;
-  width: 165px;
-  height: 40px;
-  background: #4d5ae5;
-  border: none;
-  gap: 8px;
-  padding-right: 24px;
-  padding-left: 24px;
-}
-
-.form-btn:hover,
-.form-btn:focus {
-  background-color: var(--ocean);
-} */
 
 /* Параграф */
 .subscribe-text {
@@ -762,7 +704,8 @@ ul {
 
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms ease-in-out;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-section.is-open {
@@ -771,15 +714,18 @@ ul {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   max-width: 408px;
   min-height: 584px;
   z-index: 999;
-  background-color: var(--white);
-  border-radius: 8px;
-  padding: 24px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 16px 24px rgba(0, 0, 0, 0.1),
-    0px 24px 32px rgba(0, 0, 0, 0.1);
+  background: #fcfcfc;
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  /* top: 50%;
+  left: 50%; */
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field {
@@ -788,6 +734,7 @@ ul {
 
 .modal-close-btn {
   position: absolute;
+  padding: 0;
   top: 24px;
   right: 24px;
   display: flex;
@@ -798,8 +745,8 @@ ul {
   height: 24px;
   width: 24px;
   border-radius: 100%;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
@@ -817,7 +764,6 @@ ul {
   text-align: center;
   color: var(--navy-blue);
   margin-bottom: 16px;
-  margin-top: 48px;
 }
 
 .modal-input-form {
@@ -917,6 +863,7 @@ ul {
   transform: translateY(-50%);
   pointer-events: none;
   fill: var(--navy-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-label:focus + .user-icon {
