--- a/css/styles.css
+++ b/css/styles.css
@@ -714,17 +714,17 @@ ul {
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   max-width: 408px;
   min-height: 584px;
-  z-index: 999;
   background: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  /* top: 50%;
-  left: 50%; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn {
@@ -774,11 +774,11 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate);
-  margin-bottom: 4px;
+  margin-bottom: 16px;
 }
 
 .modal-input-label {
-  display: flex;
+  display: block;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -848,16 +848,21 @@ ul {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   fill: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
 .order_form_policy {
   margin-bottom: 24px;
 }
+.review-from-checkbox-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .order-form-policy-checkbox:checked
   + .order-from-check-box-label
   .order-from-own-checkbox {
-  background-color: var(--iris);
+  fill: #f4f4fd;
+  background-color: #404bbf;
 }
 
 .order-from-check-box-label {
@@ -891,5 +896,6 @@ ul {
   margin-right: auto;
   margin-left: auto;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
