--- a/css/styles.css
+++ b/css/styles.css
@@ -701,7 +701,6 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -713,8 +712,8 @@ ul {
   pointer-events: auto;
 }
 
-.modal {
-  position: fixed;
+.modal-window {
+  position: absolute;
   max-width: 408px;
   min-height: 584px;
   background: #fcfcfc;
@@ -740,10 +739,12 @@ ul {
   height: 24px;
   width: 24px;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: var(--ocean);
@@ -859,10 +860,11 @@ ul {
 }
 
 .order-form-policy-checkbox:checked
-  + .order-from-check-box-label
+  + .order-form-check-box-label
   .order-from-own-checkbox {
-  fill: #f4f4fd;
   background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .order-from-check-box-label {
@@ -898,4 +900,5 @@ ul {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
