--- a/css/styles.css
+++ b/css/styles.css
@@ -762,11 +762,11 @@ ul {
   color: var(--navy-blue);
   margin-bottom: 16px;
 }
-.modal_field {
+.modal-field {
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
-.modal_input {
+.modal-input {
   position: relative;
   display: flex;
   align-items: center;
@@ -850,9 +850,12 @@ ul {
   cursor: pointer;
   fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
-.order_form_policy {
+.order-form-policy {
   margin-bottom: 24px;
 }
 .review-from-checkbox-icon {
@@ -898,7 +901,5 @@ ul {
   margin-right: auto;
   margin-left: auto;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
