--- a/css/styles.css
+++ b/css/styles.css
@@ -740,7 +740,7 @@ ul {
   height: 24px;
   width: 24px;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .close-icon {
