--- a/css/styles.css
+++ b/css/styles.css
@@ -768,6 +768,9 @@ ul {
   position: relative;
   margin-bottom: 8px;
 }
+.modal-field.modal-field-textarea {
+  margin-bottom: 16px;
+}
 .modal-input {
   position: relative;
   display: flex;
@@ -816,6 +819,7 @@ ul {
 }
 
 .input-label-textarea {
+  display: block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -830,7 +834,6 @@ ul {
   padding: 8px 16px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 8px;
 }
 
 .input-label-textarea:focus,
