--- a/css/styles.css
+++ b/css/styles.css
@@ -854,8 +854,7 @@ ul {
   cursor: pointer;
   fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background-color: #404bbf;
-  border: none;
+  margin-right: 8px;
 }
 
 .order-form-policy {
@@ -865,9 +864,7 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.order-form-policy-checkbox:checked
-  + .order-form-check-box-label
-  .order-from-own-checkbox {
+.checkbox:checked + .order-from-check-box-label .order-from-own-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -889,6 +886,7 @@ ul {
 
 .send-btn {
   display: block;
+  border: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
